@@ -1,3 +1,10 @@
+2008-09-16  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c: move TclResetCancellation to be called on
+	returning to level 0, as opposed to it being called on starting a
+	command at level 0. Add a call on returning via Tcl_EvalObjEx to
+	fix [Bug 2114165].
+
 2008-09-10  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/binary.n: Added partial documentation of [binary encode] and
